--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+:root {
+    --BackgroundColor: #3a5163;
+    --TitleBackgroundColor: #2c3d4a;
+}
+
 body {
-    background-color: grey;
+    background-color: var(--BackgroundColor);
+}
+
+#Title {
+    background-color: var(--TitleBackgroundColor);
+    margin: 10%;
 }
