--- a/contato/contato.css
+++ b/contato/contato.css
@@ -1,19 +1,80 @@
 :root {
     --background: #e5e5e5;
     --principalBG: white;
+    --Menutextcolor: #a4446a;
 }
 
 body {
-    background-color: var(--background);
+    background-color: var(--principalBG);
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    border: none;
+    color: var(--Menutextcolor);
+    font-weight: 600;
+    font-size: medium;
+    background-color: var(--principalBG);
+    cursor: pointer;
+}
+
+input, textarea {
+    border: none;
+    border-bottom: 2px solid black;
+    width: 100%;
+    outline: none;
+}
+
+textarea {
+    min-width: 100%;
+    height: 3rem;
+}
+
+#menu {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-self: right;
+    align-items: center;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+}
+
+#menu a {
+    padding: 0.5rem;
+    text-decoration: none;
+    color: var(--Menutextcolor);
 }
 
 #background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
     background-color: var(--principalBG);
-    padding: 1%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    grid-template-rows: 15% 1fr;
+    gap: 1rem;
+    justify-items: center;
+    align-items: center;
 } 
 
+#Fale, #principal {
+    align-self: baseline;
+}
+
+#inputinfo {
+    padding: 3%;
+    justify-content: space-around;
+    display: flex;
+    flex-flow: column;
+}
+
 #logo {
-    width: 20%;
+    width: 75%;
 }
 
 #principal {
@@ -22,7 +83,51 @@ body {
     flex-flow: row wrap;
 }
 
+form {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 1%;
+}
+
 #formulario {
-    margin-left: 20%;
+    display: flex;
+    flex-flow: column;
     padding: 1%;
+    bottom: 10%;
+    padding-bottom: 2%;
+    overflow: auto;
+    width: 90%;
+}
+
+#oForm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
+    gap: 2vw;
+}
+
+#oForm div {
+    width: 100%;
+}
+
+#txt {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#TextoMaluco { 
+    letter-spacing: 0.5rem;
+    text-align: justify;
+    width: 90%;
+    padding: 2%;
+}
+
+#FormSend {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: auto;
+    color: black;
 }
